--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -18,6 +18,10 @@
     align-items: center;
     gap: 5px;
 }
+.td-item-toogle > :not(label) {
+    flex-grow: 1;
+    flex-basis: 0;
+  }
 
 .td-item-title, .td-item-tr {
     display: flex;
@@ -74,12 +78,18 @@
 
 .td-delete-icon {
     display: flex;
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
     position: absolute;
     right: -4px;
     top: -6px;
-    color: #D9043D;
+    color: #F2F2F2;
     font-weight: 700;
     font-size: 1.2rem;
+}
+.td-delete-icon:hover {
+    color: #D9043D;
 }
 
 /* Item title counter */
