--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,40 @@ html {
 
 body {
   margin: 0;
-  background-image: linear-gradient(135deg, #262521 70%, #403F3C 100%);
-  display: grid;
-  place-items: center;
   padding: 0;
   height: 100vh;
   width: 100vw;
+  display: grid;
+  place-items: center;
+  position: relative;
+  overflow: hidden;
+}
+body::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(135deg, #262521 70%, #403F3C 100%);
+  z-index: -1;
+}
+
+body::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(135deg, #262521 80%, #30F284 180%);
+  z-index: -1;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+body.green-gradient::after {
+  opacity: 1;
 }
 
 #root {
@@ -22,4 +50,5 @@ body {
   max-width: 85vw;
   max-height: 100vh;
   overflow: visible;
+  z-index: 1;
 }
