--- a/src/App/index.css
+++ b/src/App/index.css
@@ -52,3 +52,32 @@ body.green-gradient::after {
   overflow: visible;
   z-index: 1;
 }
+
+/* Congrats message */
+.td-congrats-message {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.6rem;
+  color: #30F284;
+  font-weight: 700;
+  background-color: rgb(89, 88, 86, 0.8);
+  box-shadow: 0 0 20px 5px rgba(89, 88, 86, 0.6);
+  border-radius: 10px;
+  padding: 20px;
+  border: none;
+  opacity: 0; 
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.td-congrats-message.fade-in {
+  opacity: 1; /* Visible */
+  transform: translate(-50%, -50%) scale(1); 
+}
+
+.td-congrats-message.fade-out {
+  opacity: 0; 
+  transform: translate(-50%, -50%) scale(0.9); 
+}
