--- a/src/components/TodoIcons/TodoIcon.css
+++ b/src/components/TodoIcons/TodoIcon.css
@@ -21,3 +21,13 @@
 .td-delete-icon:hover {
     color: #D9043D;
 }
+
+/* Icons */
+.icon-delete-svg {
+    height: 40px;
+    width: 25px;
+}
+.icon-check-svg {
+    height: 25px;
+    width: 25px;
+}
