--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    padding-top: 40px;
+    /* padding-top: 40px; */
     position: relative;
     overflow: hidden;
   }
@@ -47,10 +47,11 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     position: relative;
     font-family: 'Bunken Tech Sans SC Wide Med', sans-serif;
     max-width: 85vw;
-    max-height: 100vh;
+    height: 80%;
     overflow: visible;
     z-index: 1;
   }
